Implementacion de metodo de navegacion dentro de ventanas